--- a/app/src/main/res/layout/edit_one_task.xml
+++ b/app/src/main/res/layout/edit_one_task.xml
@@ -34,7 +34,7 @@
             android:id="@+id/btDelete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="invisible"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btSave"
